# football_manager

./: .gitignore  PLAYER_STATS_QUICK_REF.md  README.md  pyproject.toml
.claude/: settings.local.json
data/models/: match_predictor.joblib  valuation_model.joblib
fm/: __init__.py  __main__.py  config.py
fm/api/: app.py  dependencies.py
fm/api/routers/: analytics.py  club.py  match.py  news.py  saves.py  scouting.py  season.py  squad.py  tactics.py  training.py  transfers.py
fm/api/schemas/: common.py  match.py  season.py  squad.py  tactics.py  transfers.py
fm/api/websocket/: match_ws.py
fm/core/: cascading_consequences.py  consequence_engine.py  event_bus.py  football_life.py  game_state.py  match_situations.py
fm/db/: database.py  ingestion.py  models.py  repositories.py
fm/engine/: chain_states.py  commentary.py  cuda_batch.py  match_context.py  match_engine.py  match_state.py  pitch.py  possession_chain.py  psychology.py  resolver.py  resolver_v3.py  roles.py  simulator.py  tactics.py  transition_calculator.py
fm/engine/ml/: match_predictor.py  model_store.py  tactical_scorer.py  training_data.py  valuation_model.py  xg_model.py
fm/ui/: app.py  screens.py
fm/utils/: cache.py  helpers.py
fm/world/: ai_manager.py  analytics.py  assistant.py  board.py  consequence_registry.py  continental.py  contracts.py  cup.py  dynamics.py  finance.py  form_tracker.py  injury_model.py  morale.py  news_engine.py  player_development.py  player_dynamics.py  scouting.py  season.py  training.py  transfer_market.py  youth_academy.py
frontend/: package.json  vite.config.ts
frontend/data/models/: xg_model.joblib
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ClubLogo.tsx  LeagueLogo.tsx
frontend/src/components/common/: ClubBadge.tsx  Layout.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  LeagueTable.tsx  MatchDay.tsx  News.tsx  PlayerDetail.tsx  SaveManager.tsx  Squad.tsx  Tactics.tsx  Training.tsx  Transfers.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
saves/: football_manager.db-shm
scripts/: download_logos.py
tests/: simulation_suite.py  test_comprehensive_sim.py  test_consequences.py  test_dynamics.py  test_e2e_gameplay.py  test_engine.py  test_engine_v3.py  test_full_integration.py  test_ml_models.py  test_narrative.py  test_positional_play.py  test_ratings_form.py  test_realism_deep.py  test_realism_extreme.py  test_three_month_cycle.py  test_v3_chain_execution.py  test_v3_consequences.py  test_v3_injury_form.py  test_v3_match_engine_stats.py  test_v3_match_situations_integration.py  test_v3_ml_advanced.py  test_v3_narrative_logic.py  test_v3_psychology.py  test_v3_realism.py  test_v3_tactics.py  test_youth_depth.py
tests/test_api/: test_endpoints.py
