[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-manager"
version = "0.1.0"
description = "Terminal-based Football Manager simulation with CUDA-accelerated match engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "textual>=0.50",
    "rich>=13.0",
    "kagglehub>=0.2",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pydantic>=2.5",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "httpx>=0.26",
]

[project.optional-dependencies]
cuda = ["cupy-cuda12x>=13.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
frontend = ["nodejs-wheel>=20.0"]

[project.scripts]
fm = "fm.__main__:main"

[tool.setuptools.packages.find]
include = ["fm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
