[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football-manager"
version = "0.1.0"
description = "Terminal-based Football Manager simulation with CUDA-accelerated match engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["football", "manager", "simulation", "tui", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Simulation",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "textual>=0.50",
    "rich>=13.0",
    "kagglehub>=0.2",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pydantic>=2.5",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "httpx>=0.26",
]

[project.optional-dependencies]
cuda = ["cupy-cuda12x>=13.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
frontend = ["nodejs-wheel>=20.0"]

[project.scripts]
fm = "fm.__main__:main"

[project.urls]
Repository = "https://github.com/roy/football-manager"
Issues = "https://github.com/roy/football-manager/issues"

[tool.hatch.build.targets.wheel]
packages = ["fm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["fm"]
omit = ["fm/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
